--- a/src/pages/Topic/Topic.module.css
+++ b/src/pages/Topic/Topic.module.css
@@ -47,6 +47,33 @@
   justify-content: center;
 }
 
+.content iframe {
+  width: 100%;
+  height: 100%;
+  min-width: 1000px;
+  min-height: 600px;
+  object-fit: contain;
+  aspect-ratio: 16 / 9;
+}
+@media screen and (max-width: 1024px) {
+  .content iframe {
+    min-width: 100%;
+    min-height: 400px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .content iframe {
+    min-width: 100%;
+    min-height: 300px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .content iframe {
+    min-width: 100%;
+    min-height: 100%;
+  }
+}
+
 .content img {
   width: 100%;
   height: 100%;
